# tracing-opentelemetry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  release.yml
benches/: metrics.rs  trace.rs
examples/: basic.rs  opentelemetry-error.rs  opentelemetry-otlp.rs  opentelemetry-remote-context.rs  opentelemetry.rs
src/: layer.rs  lib.rs  metrics.rs  span_ext.rs  stack.rs  tracer.rs
tests/: batch_global_subscriber.rs  errors.rs  filtered.rs  follows_from.rs  metrics_publishing.rs  parallel.rs  parents.rs  span_ext.rs  trace_state_propagation.rs
